--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 #DatabaseConnection
-spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/todo-app_db
 spring.datasource.username=root
 spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 
 #ViewSetup
 spring.mvc.view.prefix=/WEB-INF/views/
